Revision history for Perl extension Math::Vector::Real::XS.

0.05
        - add max_dist2_between_boxes method

0.04  27 Aug, 2013
        - eliminate redefined warnings when called with $^W set (bug
          report by Demian Riccardi)

0.03  23 Jul, 2012
        - The way object references were being created was
          incompatible with perl 5.10 and older

0.02  Jul 18, 2012
        - on tests, when comparing floats allow for a small error

0.01  Wed Jun 27 13:41:53 2012
	- original version; created by h2xs 1.23 with options
		-An Math::Vector::Real::XS
